--- a/player.html
+++ b/player.html
@@ -159,7 +159,7 @@
             </div>
             <div class="cards">
                 <div class="images">
-                    <img src="img/pro-1.jpg" alt="">
+                    <img src="img/pro-2.jpg" alt="">
                     <div class="overlay">
                         <ul>
                             <li><i class="fab fa-facebook"></i></li>
@@ -169,8 +169,38 @@
                         </ul>
                     </div>
                 </div>
-                <h3>dereck bissen</h3>
-                <p>player</p>
+                <h3>Sahjahan Sagor</h3>
+                <p>co - leader</p>
+            </div>
+            <div class="cards">
+                <div class="images">
+                    <img src="img/pro-3.jpg" alt="">
+                    <div class="overlay">
+                        <ul>
+                            <li><i class="fab fa-facebook"></i></li>
+                            <li><i class="fab fa-dribbble"></i></li>
+                            <li><i class="fab fa-twitter"></i></li>
+                            <li><i class="fab fa-google-plus"></i></li>
+                        </ul>
+                    </div>
+                </div>
+                <h3>vanesa kirby</h3>
+                <p>maintainer</p>
+            </div>
+            <div class="cards">
+                <div class="images">
+                    <img src="img/pro-4.jpg" alt="">
+                    <div class="overlay">
+                        <ul>
+                            <li><i class="fab fa-facebook"></i></li>
+                            <li><i class="fab fa-dribbble"></i></li>
+                            <li><i class="fab fa-twitter"></i></li>
+                            <li><i class="fab fa-google-plus"></i></li>
+                        </ul>
+                    </div>
+                </div>
+                <h3>dawnjohnson</h3>
+                <p>pro player</p>
             </div>
             <div class="cards">
                 <div class="images">
@@ -189,7 +219,7 @@
             </div>
             <div class="cards">
                 <div class="images">
-                    <img src="img/pro-1.jpg" alt="">
+                    <img src="img/pro-2.jpg" alt="">
                     <div class="overlay">
                         <ul>
                             <li><i class="fab fa-facebook"></i></li>
@@ -199,12 +229,12 @@
                         </ul>
                     </div>
                 </div>
-                <h3>dereck bissen</h3>
-                <p>player</p>
+                <h3>Sahjahan Sagor</h3>
+                <p>co - leader</p>
             </div>
             <div class="cards">
                 <div class="images">
-                    <img src="img/pro-1.jpg" alt="">
+                    <img src="img/pro-3.jpg" alt="">
                     <div class="overlay">
                         <ul>
                             <li><i class="fab fa-facebook"></i></li>
@@ -214,12 +244,12 @@
                         </ul>
                     </div>
                 </div>
-                <h3>dereck bissen</h3>
-                <p>player</p>
+                <h3>vanesa kirby</h3>
+                <p>maintainer</p>
             </div>
             <div class="cards">
                 <div class="images">
-                    <img src="img/pro-1.jpg" alt="">
+                    <img src="img/pro-4.jpg" alt="">
                     <div class="overlay">
                         <ul>
                             <li><i class="fab fa-facebook"></i></li>
@@ -229,39 +259,10 @@
                         </ul>
                     </div>
                 </div>
-                <h3>dereck bissen</h3>
-                <p>player</p>
+                <h3>dawnjohnson</h3>
+                <p>pro player</p>
             </div>
-            <div class="cards">
-                <div class="images">
-                    <img src="img/pro-1.jpg" alt="">
-                    <div class="overlay">
-                        <ul>
-                            <li><i class="fab fa-facebook"></i></li>
-                            <li><i class="fab fa-dribbble"></i></li>
-                            <li><i class="fab fa-twitter"></i></li>
-                            <li><i class="fab fa-google-plus"></i></li>
-                        </ul>
-                    </div>
-                </div>
-                <h3>dereck bissen</h3>
-                <p>player</p>
-            </div>
-            <div class="cards">
-                <div class="images">
-                    <img src="img/pro-1.jpg" alt="">
-                    <div class="overlay">
-                        <ul>
-                            <li><i class="fab fa-facebook"></i></li>
-                            <li><i class="fab fa-dribbble"></i></li>
-                            <li><i class="fab fa-twitter"></i></li>
-                            <li><i class="fab fa-google-plus"></i></li>
-                        </ul>
-                    </div>
-                </div>
-                <h3>dereck bissen</h3>
-                <p>player</p>
-            </div>
+            
         </div>
        
     </section>
