--- a/productCart.html
+++ b/productCart.html
@@ -133,97 +133,89 @@
         </div>
     </nav>
 
-    <section class="bannerTeam">
+    <section class="bannerCart">
         <div class="aboutTitle">
-            <h3>team</h3>
-            <p>home / team</p>
+            <h3>shop cart</h3>
+            <p>home / shop cart</p>
         </div>
     </section>
 
-    <section class="team">
-        <div class="cards">
-            <div class="images">
-                <img src="img/team-2.png" alt="">
-            </div>
-            <div class="text">
-                <h3>champions</h3>
-                <p>12 player</p>
-            </div>
-        </div>
-        <div class="cards">
-            <div class="images">
-                <img src="img/team-1.png" alt="">
-            </div>
-            <div class="text">
-                <h3>assasin</h3>
-                <p>12 player</p>
-            </div>
-        </div>
-        <div class="cards">
-            <div class="images">
-                <img src="img/team-3.png" alt="">
-            </div>
-            <div class="text">
-                <h3>gaimreapers</h3>
-                <p>12 player</p>
-            </div>
-        </div>
-        <div class="cards">
-            <div class="images">
-                <img src="img/team-4.png" alt="">
-            </div>
-            <div class="text">
-                <h3>joker</h3>
-                <p>12 player</p>
-            </div>
-        </div>
-        <div class="cards">
-            <div class="images">
-                <img src="img/team-5.png" alt="">
-            </div>
-            <div class="text">
-                <h3>ninja</h3>
-                <p>12 player</p>
-            </div>
-        </div>
-        <div class="cards">
-            <div class="images">
-                <img src="img/team-6.png" alt="">
-            </div>
-            <div class="text">
-                <h3>scary clown</h3>
-                <p>12 player</p>
-            </div>
-        </div>
-        <div class="cards">
-            <div class="images">
-                <img src="img/team-10.png" alt="">
-            </div>
-            <div class="text">
-                <h3>dragons</h3>
-                <p>12 player</p>
-            </div>
-        </div>
-        <div class="cards">
-            <div class="images">
-                <img src="img/team-8.png" alt="">
-            </div>
-            <div class="text">
-                <h3>witch</h3>
-                <p>12 player</p>
-            </div>
-        </div>
+    <section class="productShop">
+        <table>
+            <tr>
+                <th>product</th>
+                <th>price</th>
+                <th>quantity</th>
+                <th>total</th>
+                <th>edit</th>
+            </tr>
+            <tr>
+                <td><ul>
+                    <li><div class="images">
+                        <img src="img/product-1.jpg" alt="">
+                    </div></li>
+                    <li>gears controllers</li>
+                </ul></td>
+                <td>$250</td>
+                <td class="quantityForm"><ul class="quantity">
+                    <li><button class="btnFill">-</button></li>
+                    <li><button class="btnNoFill">0</button></li>
+                    <li><button class="btnFill">+</button></li>
+                </ul></td>
+                <td>$750.00</td>
+                <td><i class="fas fa-trash"></i></td>
+            </tr>
+            <tr>
+                <td><ul>
+                    <li><div class="images">
+                        <img src="img/product-1.jpg" alt="">
+                    </div></li>
+                    <li>gears controllers</li>
+                </ul></td>
+                <td>$250</td>
+                <td class="quantityForm"><ul class="quantity">
+                    <li><button class="btnFill">-</button></li>
+                    <li><button class="btnNoFill">0</button></li>
+                    <li><button class="btnFill">+</button></li>
+                </ul></td>
+                <td>$750.00</td>
+                <td><i class="fas fa-trash"></i></td>
+            </tr>
+            <tr>
+                <td><ul>
+                    <li><div class="images">
+                        <img src="img/product-1.jpg" alt="">
+                    </div></li>
+                    <li>gears controllers</li>
+                </ul></td>
+                <td>$250</td>
+                <td class="quantityForm"><ul class="quantity">
+                    <li><button class="btnFill">-</button></li>
+                    <li><button class="btnNoFill">0</button></li>
+                    <li><button class="btnFill">+</button></li>
+                </ul></td>
+                <td>$750.00</td>
+                <td><i class="fas fa-trash"></i></td>
+            </tr>
+            <tr>
+                <td><ul>
+                    <li><div class="images">
+                        <img src="img/product-1.jpg" alt="">
+                    </div></li>
+                    <li>gears controllers</li>
+                </ul></td>
+                <td>$250</td>
+                <td class="quantityForm"><ul class="quantity">
+                    <li><button class="btnFill">-</button></li>
+                    <li><button class="btnNoFill">0</button></li>
+                    <li><button class="btnFill">+</button></li>
+                </ul></td>
+                <td>$750.00</td>
+                <td><i class="fas fa-trash"></i></td>
+            </tr>
+        </table>
     </section>
-    
-    <div class="pagination">
-        <ul>
-            <li><i class="fas fa-chevron-left"></i></li>
-            <li>01</li>
-            <li>02</li>
-            <li>03</li>
-            <li><i class="fas fa-chevron-right"></i></li>
-        </ul>
-    </div>
+
 
 
     <section class="newsLatter">
