--- a/singlePlayer.html
+++ b/singlePlayer.html
@@ -178,10 +178,10 @@
                     <td>:</td>
                     <td>
                         <ul>
-                            <li><i class="fab fa-facebook"></i></li>
-                            <li><i class="fab fa-dribbble"></i></li>
-                            <li><i class="fab fa-twitter"></i></li>
-                            <li><i class="fab fa-google-plus-g"></i></li>
+                            <li><a href=""><i class="fab fa-facebook"></i></a></li>
+                            <li><a href=""><i class="fab fa-dribbble"></i></a></li>
+                            <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                            <li><a href=""><i class="fab fa-google-plus-g"></i></a></li>
                         </ul>
                     </td>
                 </tr>
@@ -198,6 +198,7 @@
                     <div class="content">
                         <div class="team1">
                             <img src="img/team-1.png" alt="">
+                            <p>assasin</p>
                         </div>
                         <div class="match">
                             <div class="score">
@@ -223,13 +224,15 @@
                         </div>
                         <div class="team1">
                             <img src="img/team-2.png" alt="">
+                            <p>champion</p>
                         </div>
                     </div>
                 </div>
                 <div class="cards">
                     <div class="content">
                         <div class="team1">
-                            <img src="img/team-1.png" alt="">
+                            <img src="img/team-3.png" alt="">
+                            <p>gaimreaper</p>
                         </div>
                         <div class="match">
                             <div class="score">
@@ -237,7 +240,7 @@
                                     <li>
                                         <p>50</p>
                                     </li>
-                                    <li><button class="btnFill">finished</button></li>
+                                    <li><button class="btnFillFinish">finished</button></li>
                                     <li>
                                         <p>47</p>
                                     </li>
@@ -254,7 +257,8 @@
                             </div>
                         </div>
                         <div class="team1">
-                            <img src="img/team-2.png" alt="">
+                            <img src="img/team-4.png" alt="">
+                            <p>joker</p>
                         </div>
                     </div>
                 </div>
@@ -267,42 +271,49 @@
                 <ul>
                     <li><div class="images">
                         <i class="fas fa-play"></i>
-                        <img src="img/thumbVideo.jpg" alt="">
+                        <img src="img/thumbVideo1.jpg" alt="">
                     </div>
                 </li>
                     <li><div class="images">
                         <i class="fas fa-play"></i>
-                        <img src="img/thumbVideo.jpg" alt="">
+                        <img src="img/thumbVideo-2.jpg" alt="">
                     </div>
                 </li>
                     <li><div class="images">
                         <i class="fas fa-play"></i>
-                        <img src="img/thumbVideo.jpg" alt="">
+                        <img src="img/thumbVideo-3.jpg" alt="">
                     </div>
                 </li>
                     <li><div class="images">
                         <i class="fas fa-play"></i>
-                        <img src="img/thumbVideo.jpg" alt="">
+                        <img src="img/thumbVideo-4.jpg" alt="">
                     </div>
                 </li>
                     <li><div class="images">
                         <i class="fas fa-play"></i>
-                        <img src="img/thumbVideo.jpg" alt="">
+                        <img src="img/thumbVideo-5.jpg" alt="">
                     </div>
                 </li>
                     <li><div class="images">
                         <i class="fas fa-play"></i>
-                        <img src="img/thumbVideo.jpg" alt="">
+                        <img src="img/thumbVideo-6.jpg" alt="">
                     </div>
                 </li>
                     <li><div class="images">
                         <i class="fas fa-play"></i>
-                        <img src="img/thumbVideo.jpg" alt="">
+                        <img src="img/thumbVideo-7.jpg" alt="">
                     </div>
+                </li>
                 </li>
                     <li><div class="images">
                         <i class="fas fa-play"></i>
-                        <img src="img/thumbVideo.jpg" alt="">
+                        <img src="img/thumbVideo-6.jpg" alt="">
+                    </div>
+                </li>
+                </li>
+                    <li><div class="images">
+                        <i class="fas fa-play"></i>
+                        <img src="img/thumbVideo-3.jpg" alt="">
                     </div>
                 </li>
                 </ul>
