--- a/productDetails.html
+++ b/productDetails.html
@@ -157,6 +157,9 @@
                             <li><div class="images">
                                 <img src="img/product-1.jpg" alt="">
                             </div></li>
+                            <li><div class="images">
+                                <img src="img/product-1.jpg" alt="">
+                            </div></li>
                         </ul>
                     </div>
                 </div>
