--- a/blog.html
+++ b/blog.html
@@ -133,89 +133,176 @@
         </div>
     </nav>
 
-    <section class="bannerCart">
+    <section class="bannerBlog">
         <div class="aboutTitle">
-            <h3>shop cart</h3>
+            <h3>blog page</h3>
             <p>home / shop cart</p>
         </div>
     </section>
 
-    <section class="productShop">
-        <table>
-            <tr>
-                <th>product</th>
-                <th>price</th>
-                <th>quantity</th>
-                <th>total</th>
-                <th>edit</th>
-            </tr>
-            <tr>
-                <td><ul>
-                    <li><div class="images">
-                        <img src="img/product-1.jpg" alt="">
-                    </div></li>
-                    <li>gears controllers</li>
-                </ul></td>
-                <td>$250</td>
-                <td class="quantityForm"><ul class="quantity">
-                    <li><button class="btnFill">-</button></li>
-                    <li><button class="btnNoFill">0</button></li>
-                    <li><button class="btnFill">+</button></li>
-                </ul></td>
-                <td>$750.00</td>
-                <td><i class="fas fa-trash"></i></td>
-            </tr>
-            <tr>
-                <td><ul>
-                    <li><div class="images">
-                        <img src="img/product-1.jpg" alt="">
-                    </div></li>
-                    <li>gears controllers</li>
-                </ul></td>
-                <td>$250</td>
-                <td class="quantityForm"><ul class="quantity">
-                    <li><button class="btnFill">-</button></li>
-                    <li><button class="btnNoFill">0</button></li>
-                    <li><button class="btnFill">+</button></li>
-                </ul></td>
-                <td>$750.00</td>
-                <td><i class="fas fa-trash"></i></td>
-            </tr>
-            <tr>
-                <td><ul>
-                    <li><div class="images">
-                        <img src="img/product-1.jpg" alt="">
-                    </div></li>
-                    <li>gears controllers</li>
-                </ul></td>
-                <td>$250</td>
-                <td class="quantityForm"><ul class="quantity">
-                    <li><button class="btnFill">-</button></li>
-                    <li><button class="btnNoFill">0</button></li>
-                    <li><button class="btnFill">+</button></li>
-                </ul></td>
-                <td>$750.00</td>
-                <td><i class="fas fa-trash"></i></td>
-            </tr>
-            <tr>
-                <td><ul>
-                    <li><div class="images">
-                        <img src="img/product-1.jpg" alt="">
-                    </div></li>
-                    <li>gears controllers</li>
-                </ul></td>
-                <td>$250</td>
-                <td class="quantityForm"><ul class="quantity">
-                    <li><button class="btnFill">-</button></li>
-                    <li><button class="btnNoFill">0</button></li>
-                    <li><button class="btnFill">+</button></li>
-                </ul></td>
-                <td>$750.00</td>
-                <td><i class="fas fa-trash"></i></td>
-            </tr>
-        </table>
-    </section>
+    <section class="blogContent">
+        <div class="blog">
+            <div class="cards">
+                <div class="images">
+                    <img src="img/imgBlog.jpg" alt="">
+                </div>
+                <div class="blogText">
+                    <h3>welcome play for everyone watcher wild</h3>
 
+                    <ul class="details">
+                        <li><i class="fas fa-calendar"></i>20 januari, 2020</li>
+                        <li><i class="fas fa-user"></i>sahjan sagor</li>
+                        <li><i class="fas fa-comments"></i>16 comments</li>
+                    </ul>
+
+                    <p>Aliquam euismod at potenti velit risus erat nulla blandit leo.rhoncus socioserqu Sagittis cubilia turpis Taciti gravida Vestibulum Eu augue augue duis rhoncus sociosqu. Quam nec rhoncus sociosquerat potentiye volutpat eleifend ni malesuada ridiculus Dapibus vel nascetur. rhoncus sociosquerat dictumst, leo donec vivamus potenti cursus cras rhoncus sociosquerat phasellus ullamcorper.</p>
+
+                    <span>read more</span>
+                </div>
+            </div>
+            <div class="cards">
+                <div class="images">
+                    <img src="img/imgBlog1.jpg" alt="">
+                </div>
+                <div class="blogText">
+                    <h3>welcome play for everyone watcher wild</h3>
+
+                    <ul class="details">
+                        <li><i class="fas fa-calendar"></i>20 januari, 2020</li>
+                        <li><i class="fas fa-user"></i>sahjan sagor</li>
+                        <li><i class="fas fa-comments"></i>16 comments</li>
+                    </ul>
+
+                    <p>Aliquam euismod at potenti velit risus erat nulla blandit leo.rhoncus socioserqu Sagittis cubilia turpis Taciti gravida Vestibulum Eu augue augue duis rhoncus sociosqu. Quam nec rhoncus sociosquerat potentiye volutpat eleifend ni malesuada ridiculus Dapibus vel nascetur. rhoncus sociosquerat dictumst, leo donec vivamus potenti cursus cras rhoncus sociosquerat phasellus ullamcorper.</p>
+
+                    <span>read more</span>
+                </div>
+            </div>
+            <div class="cards">
+                <div class="images">
+                    <img src="img/imgBlog2.jpg" alt="">
+                </div>
+                <div class="blogText">
+                    <h3>welcome play for everyone watcher wild</h3>
+
+                    <ul class="details">
+                        <li><i class="fas fa-calendar"></i>20 januari, 2020</li>
+                        <li><i class="fas fa-user"></i>sahjan sagor</li>
+                        <li><i class="fas fa-comments"></i>16 comments</li>
+                    </ul>
+
+                    <p>Aliquam euismod at potenti velit risus erat nulla blandit leo.rhoncus socioserqu Sagittis cubilia turpis Taciti gravida Vestibulum Eu augue augue duis rhoncus sociosqu. Quam nec rhoncus sociosquerat potentiye volutpat eleifend ni malesuada ridiculus Dapibus vel nascetur. rhoncus sociosquerat dictumst, leo donec vivamus potenti cursus cras rhoncus sociosquerat phasellus ullamcorper.</p>
+
+                    <span>read more</span>
+                </div>
+            </div>
+        </div>
+        <ul class="blogSider">
+            <li><div class="cards searchBox">
+                <input type="text" placeholder="Search Here">
+            </div></li>
+            <li><div class="cards">
+                <h3>post category</h3>
+                <table>
+                    <tr>
+                        <td>action</td>
+                        <td>( 20 )</td>
+                    </tr>
+                    <tr>
+                        <td>adventure</td>
+                        <td>( 20 )</td>
+                    </tr>
+                    <tr>
+                        <td>fighting</td>
+                        <td>( 20 )</td>
+                    </tr>
+                    <tr>
+                        <td>flight imulstion</td>
+                        <td>( 20 )</td>
+                    </tr>
+                    <tr>
+                        <td>platform</td>
+                        <td>( 20 )</td>
+                    </tr>
+                    <tr>
+                        <td>racing</td>
+                        <td>( 20 )</td>
+                    </tr>
+                </table>
+            </div></li>
+            <li><div class="cards">
+                <h3>popular post</h3>
+                <div class="contentPopular">
+                    <div class="popularPost">
+                        <div class="images">
+                            <img src="img/thumb-1.jpg" alt="">
+                        </div>
+                        <div class="contentPost">
+                            <h4>pubg</h4>
+                            <p>november 15, 2022</p>
+                        </div>
+                    </div>
+                    <div class="popularPost">
+                        <div class="images">
+                            <img src="img/thumb-2.jpg" alt="">
+                        </div>
+                        <div class="contentPost">
+                            <h4>sniper 2 ghost warrior</h4>
+                            <p>november 15, 2022</p>
+                        </div>
+                    </div>
+                    <div class="popularPost">
+                        <div class="images">
+                            <img src="img/thumb-3.jpg" alt="">
+                        </div>
+                        <div class="contentPost">
+                            <h4>free fire</h4>
+                            <p>november 15, 2022</p>
+                        </div>
+                    </div>
+                    <div class="popularPost">
+                        <div class="images">
+                            <img src="img/thumb-4.jpg" alt="">
+                        </div>
+                        <div class="contentPost">
+                            <h4>need fr spe</h4>
+                            <p>november 15, 2022</p>
+                        </div>
+                    </div>
+                    <div class="popularPost">
+                        <div class="images">
+                            <img src="img/thumb-5.jpg" alt="">
+                        </div>
+                        <div class="contentPost">
+                            <h4>need for speed</h4>
+                            <p>november 15, 2022</p>
+                        </div>
+                    </div>
+                </div>
+            </div></li>
+            <li>
+                <div class="cards">
+                    <h3>popular tags</h3>
+
+                    <ul class="tags">
+                        <li><a href="">pubg</a></li>
+                        <li><a href="">dota 2</a></li>
+                        <li><a href="">free fire</a></li>
+                        <li><a href="">call of duty</a></li>
+                        <li><a href="">delta force</a></li>
+                        <li><a href="">call of duty 2</a></li>
+                        <li><a href="">delta force 2</a></li>
+                        <li><a href="">resident evil</a></li>
+                    </ul>
+                </div>
+            </li>
+            <li>
+                <div class="cards">
+                    <img src="img/game-1.jpg" alt="">
+                </div>
+            </li>
+        </ul>
+    </section>
 
 
     <section class="newsLatter">
