--- a/productDetails.html
+++ b/productDetails.html
@@ -162,6 +162,10 @@
                             </div></li>
                         </ul>
                     </div>
+                    <ul class="review">
+                        <li>description</li>
+                        <li>review</li>
+                    </ul>
                 </div>
             </div>
 
